src/parsers/management.c
/* Generated by re2c 2.2 */
#include "management.h"





RequestStatus lexRequest(const char *str, size_t len, const char **data)
{
	const char *YYCURSOR = str, *YYLIMIT = str + len, *YYMARKER, *arg;
	RequestStatus result = ERROR;
	enum YYCONDTYPE cond = yyccmd;
	const char *yyt1;


	for (;;)
	{
		
{
	char yych;
	switch (cond) {
	case yyccmd:
		goto yyc_cmd;
	case yycdone:
		goto yyc_done;
	}
/* *********************************** */
yyc_cmd:
	yych = *YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy4;
	default:
		if (YYLIMIT <= YYCURSOR) goto yy27;
		goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
	{ return ERROR; }
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy5;
	case 'T':
	case 't':	goto yy7;
	default:	goto yy3;
	}
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy8;
	default:	goto yy6;
	}
yy6:
	YYCURSOR = YYMARKER;
	goto yy3;
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy9;
	default:	goto yy6;
	}
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy10;
	default:	goto yy6;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy11;
	default:	goto yy6;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy12;
	default:	goto yy6;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy13;
	default:	goto yy6;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy15;
	default:	goto yy6;
	}
yy13:
	++YYCURSOR;
	cond = yycdone;
	{ result = STATS; continue; }
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy16;
	default:	goto yy6;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy17;
	default:	goto yy6;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy18;
	default:	goto yy6;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy19;
	default:	goto yy6;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'F':
	case 'f':	goto yy20;
	default:	goto yy6;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy21;
	default:	goto yy6;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy22;
	default:	goto yy6;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy23;
	default:	goto yy6;
	}
yy23:
	++YYCURSOR;
	yyt1 = YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= 0x00) {
		if (YYLIMIT <= YYCURSOR) goto yy24;
		goto yy25;
	}
	goto yy26;
yy24:
	arg = yyt1;
	cond = yycdone;
	{ result = SET_ERROR_FILE; *data = arg; continue; }
yy25:
	yych = *++YYCURSOR;
yy26:
	switch (yych) {
	case '\n':	goto yy24;
	default:
		if (YYLIMIT <= YYCURSOR) goto yy24;
		goto yy25;
	}
yy27:
	{ return result; }
/* *********************************** */
yyc_done:
	yych = *YYCURSOR;
	if (yych >= 0x01) goto yy30;
	if (YYLIMIT <= YYCURSOR) goto yy32;
yy30:
	++YYCURSOR;
	{ return ERROR; }
yy32:
	{ return result; }
}

	}

	return ERROR;
}
